--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -42,7 +42,7 @@
 			<string>monospace</string>
 		</test>
 		<edit name="family" mode="assign">
-			<string>Consolas</string>
+			<string>Cascadia Mono</string>
 		</edit>
 	</match>
 	<selectfont>
