--- a/config/i3/config
+++ b/config/i3/config
@@ -1,6 +1,6 @@
 set $mod Mod4
 set $font "pango:monospace 9"
-set $term "env GTK_THEME=Adwaita:dark mate-terminal"
+set $term "konsole"
 set $launcher "rofi -show run
 
 font $font
